--- a/ResourceHealthChecker/SampleConsoleApp/SampleConsoleApp.csproj
+++ b/ResourceHealthChecker/SampleConsoleApp/SampleConsoleApp.csproj
@@ -22,6 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ResourceHealthChecker.SqlServer\ResourceHealthChecker.SqlServer.csproj" />
     <ProjectReference Include="..\ResourceHealthChecker\ResourceHealthChecker.csproj" />
   </ItemGroup>
 
