--- a/ResourceHealthChecker/ResourceHealthChecker.FileSystem/ResourceHealthChecker.FileSystem.csproj
+++ b/ResourceHealthChecker/ResourceHealthChecker.FileSystem/ResourceHealthChecker.FileSystem.csproj
@@ -14,4 +14,11 @@
     <ProjectReference Include="..\ResourceHealthChecker\ResourceHealthChecker.csproj" />
   </ItemGroup>
 
+
+	<ItemGroup>
+		<AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+			<_Parameter1>HealthCheck_Test</_Parameter1>
+		</AssemblyAttribute>
+	</ItemGroup>
+
 </Project>
