--- a/ResourceHealthChecker/ResourceHealthChecker/ResourceHealthChecker.csproj
+++ b/ResourceHealthChecker/ResourceHealthChecker/ResourceHealthChecker.csproj
@@ -10,4 +10,10 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.1" />
   </ItemGroup>
 
+	<ItemGroup>
+		<AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+			<_Parameter1>HealthCheck_Test</_Parameter1>
+		</AssemblyAttribute>
+	</ItemGroup>
+
 </Project>
