--- a/src/ResourceHealthChecker/ResourceHealthChecker.csproj
+++ b/src/ResourceHealthChecker/ResourceHealthChecker.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
+    <AssemblyVersion>0.9.0</AssemblyVersion>
+    <Version>0.9.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
