--- a/tests/HealthCheck_Test/HealthCheck_Test.csproj
+++ b/tests/HealthCheck_Test/HealthCheck_Test.csproj
@@ -5,9 +5,15 @@
     <Nullable>enable</Nullable>
 
     <IsPackable>false</IsPackable>
+
+    <AssemblyVersion>1.0.0.1</AssemblyVersion>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="coverlet.msbuild" Version="3.0.3">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
     <PackageReference Include="Moq" Version="4.18.1" />
     <PackageReference Include="NUnit" Version="3.13.2" />
@@ -18,9 +24,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ResourceHealthChecker.FileSystem\ResourceHealthChecker.FileSystem.csproj" />
-    <ProjectReference Include="..\ResourceHealthChecker.SqlServer\ResourceHealthChecker.SqlServer.csproj" />
-    <ProjectReference Include="..\ResourceHealthChecker\ResourceHealthChecker.csproj" />
+    <ProjectReference Include="..\..\src\ResourceHealthChecker.FileSystem\ResourceHealthChecker.FileSystem.csproj" />
+    <ProjectReference Include="..\..\src\ResourceHealthChecker.SqlServer\ResourceHealthChecker.SqlServer.csproj" />
+    <ProjectReference Include="..\..\src\ResourceHealthChecker\ResourceHealthChecker.csproj" />
   </ItemGroup>
 
 </Project>
