--- a/src/ResourceHealthChecker/ResourceHealthChecker.csproj
+++ b/src/ResourceHealthChecker/ResourceHealthChecker.csproj
@@ -4,6 +4,9 @@
     <TargetFramework>net6.0</TargetFramework>
     <AssemblyVersion>0.9.0</AssemblyVersion>
     <Version>0.9.0</Version>
+    <PackageId>SlugEnt.$(AssemblyName)</PackageId>
+    <Authors>daborg69</Authors>
+    <AssemblyName>SlugEnt.$(MSBuildProjectName)</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
