--- a/src/ResourceHealthChecker.FileSystem/ResourceHealthChecker.FileSystem.csproj
+++ b/src/ResourceHealthChecker.FileSystem/ResourceHealthChecker.FileSystem.csproj
@@ -5,6 +5,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <AssemblyVersion>0.9.0</AssemblyVersion>
+    <AssemblyName>SlugEnt.$(MSBuildProjectName)</AssemblyName>
+    <Authors>Daborg69</Authors>
   </PropertyGroup>
 
   <ItemGroup>
