--- a/src/SampleConsoleApp/SampleConsoleApp.csproj
+++ b/src/SampleConsoleApp/SampleConsoleApp.csproj
@@ -5,7 +5,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <AssemblyVersion>1.0.0.1</AssemblyVersion>
+    <AssemblyVersion>1.2.0</AssemblyVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -25,6 +25,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ResourceHealthChecker.FileSystem\ResourceHealthChecker.FileSystem.csproj" />
+    <ProjectReference Include="..\ResourceHealthChecker.RabbitMQ\ResourceHealthChecker.RabbitMQ.csproj" />
     <ProjectReference Include="..\ResourceHealthChecker.SqlServer\ResourceHealthChecker.SqlServer.csproj" />
     <ProjectReference Include="..\ResourceHealthChecker\ResourceHealthChecker.csproj" />
   </ItemGroup>
