--- a/tests/HealthCheck_Test/HealthCheck_Test.csproj
+++ b/tests/HealthCheck_Test/HealthCheck_Test.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -25,6 +25,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\ResourceHealthChecker.FileSystem\ResourceHealthChecker.FileSystem.csproj" />
+    <ProjectReference Include="..\..\src\ResourceHealthChecker.RabbitMQ\ResourceHealthChecker.RabbitMQ.csproj" />
     <ProjectReference Include="..\..\src\ResourceHealthChecker.SqlServer\ResourceHealthChecker.SqlServer.csproj" />
     <ProjectReference Include="..\..\src\ResourceHealthChecker\ResourceHealthChecker.csproj" />
   </ItemGroup>
