Fixed bugs in SQL Health Checker Created Sensitive AppSettings configuration Add custom configuration to app Moved DB Connection Strings to Sensitive AppSettings file

--- a/src/SampleConsoleApp/ResourceHealthChecker.SampleConsole.csproj
+++ b/src/SampleConsoleApp/ResourceHealthChecker.SampleConsole.csproj
@@ -6,6 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <AssemblyVersion>1.2.0</AssemblyVersion>
+    <AssemblyName>SlugEnt.$(MSBuildProjectName)</AssemblyName>
+    <RootNamespace>SlugEnt.$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
