Enabling the ability to setup HealthCheckers from config file entries

--- a/src/SampleConsoleApp/ResourceHealthChecker.SampleConsole.csproj
+++ b/src/SampleConsoleApp/ResourceHealthChecker.SampleConsole.csproj
@@ -32,4 +32,10 @@
     <ProjectReference Include="..\ResourceHealthChecker\ResourceHealthChecker.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="AppSettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
