Refactoring of class names mainly.  Added CheckInterval configuration parameter for the HealthCheckProcessor

--- a/src/SampleConsoleApp/AppSettings.json
+++ b/src/SampleConsoleApp/AppSettings.json
@@ -1,11 +1,12 @@
 {
   "ResourceHealthChecker": {
+    "CheckIntervalMS":  5000,
     "ConfigHealthChecks": [
       {
         "Type": "FileSystem",
         "Name": "Temp Read Folder",
         "Config": {
-          "CheckInterval":  5, 
+          "CheckInterval": 55,
           "FolderPath": "C:\\temp",
           "CheckIsReadable": true,
           "CheckIsWriteable": false,
@@ -31,10 +32,10 @@
           "CheckReadTable": true,
           "CheckWriteTable": true,
           "ConnectionString": "",
-          "ReadTable":  "" ,
-          "WriteTable":  ""
+          "ReadTable": "",
+          "WriteTable": ""
         }
       }
-    ] 
+    ]
   }
 }
