--- a/src/SampleConsoleApp/AppSettings.json
+++ b/src/SampleConsoleApp/AppSettings.json
@@ -1,6 +1,9 @@
 {
+  "ConnectionStrings": {
+    "AdventureDB": "Server=podmanb.slug.local;Database=AdventureWorks2019;User Id=AdvWorksUser;Password=Adventure1492"
+  },
   "ResourceHealthChecker": {
-    "CheckIntervalMS":  5000,
+    "CheckIntervalMS": 5000,
     "ConfigHealthChecks": [
       {
         "Type": "FileSystem",
