--- a/src/ResourceHealthChecker.SqlServer/ResourceHealthChecker.SqlServer.csproj
+++ b/src/ResourceHealthChecker.SqlServer/ResourceHealthChecker.SqlServer.csproj
@@ -4,7 +4,8 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <AssemblyVersion>1.2.1</AssemblyVersion>
+    <AssemblyVersion>1.3.3</AssemblyVersion>
+	<Version>1.3.3</Version>
     <AssemblyName>SlugEnt.$(MSBuildProjectName)</AssemblyName>
     <PackageId>$(AssemblyName)</PackageId>
     <Authors>Daborg69</Authors>
