Fixed several bugs.
Appsettings.json configuration is now read correctly.
IsReady setting is now working.
IsEnabled was added allowing the checker to be enabled or disabled.
Other bug fixes

--- a/src/SampleConsoleApp/AppSettings.json
+++ b/src/SampleConsoleApp/AppSettings.json
@@ -7,30 +7,31 @@
     "ConfigHealthChecks": [
       {
         "Type": "FileSystem",
-        "Name": "Temp Read Folder",
+        "Name": "Temp Read Folder From Config",
+        "IsEnabled": true,
         "Config": {
           "CheckInterval": 55,
           "FolderPath": "C:\\temp",
           "CheckIsReadable": true,
           "CheckIsWriteable": false,
-          "ReadFileName": "",
-          "IsEnabled": false
+          "ReadFileName": ""
         }
       },
       {
         "Type": "FileSystem",
-        "Name": "Temp Write Folder",
+        "Name": "Temp Write Folder From Config",
+        "IsEnabled": true,
         "Config": {
           "FolderPath": "C:\\temp",
           "CheckIsReadable": false,
           "CheckIsWriteable": true,
-          "ReadFileName": "",
-          "IsEnabled": true
+          "ReadFileName": ""
         }
       },
       {
         "Type": "SQL",
         "Name": "Sample DB",
+        "IsEnabled": false,
         "Config": {
           "CheckReadTable": true,
           "CheckWriteTable": true,
