--- a/src/ResourceHealthChecker.FileSystem/ResourceHealthChecker.FileSystem.csproj
+++ b/src/ResourceHealthChecker.FileSystem/ResourceHealthChecker.FileSystem.csproj
@@ -1,13 +1,16 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <AssemblyVersion>1.3.3</AssemblyVersion>
-	<Version>1.3.3</Version>
+    <AssemblyVersion>1.3.4</AssemblyVersion>
+	<Version>1.3.4</Version>
     <AssemblyName>SlugEnt.$(MSBuildProjectName)</AssemblyName>
-    <Authors>Daborg69</Authors>
+    <Authors>Scott Herrmann</Authors>
+    <Company>SlugEnt</Company>
+    <Title>Provides File Checking Health Checks for the ResourceHealthChecker library</Title>
+    <Copyright>Scott Herrmann 2023</Copyright>
   </PropertyGroup>
 
   <ItemGroup>
