--- a/src/ResourceHealthChecker.SqlServer/ResourceHealthChecker.SqlServer.csproj
+++ b/src/ResourceHealthChecker.SqlServer/ResourceHealthChecker.SqlServer.csproj
@@ -4,11 +4,15 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <AssemblyVersion>1.3.3</AssemblyVersion>
-	<Version>1.3.3</Version>
+    <AssemblyVersion>1.3.4</AssemblyVersion>
+	<Version>1.3.4</Version>
     <AssemblyName>SlugEnt.$(MSBuildProjectName)</AssemblyName>
     <PackageId>$(AssemblyName)</PackageId>
-    <Authors>Daborg69</Authors>
+    <Authors>Scott Herrmann</Authors>
+    <Title>Provides Health Check for Sql Server</Title>
+    <Company>SlugEnt</Company>
+    <Description>Provides a simple means of health checking a sql server for a program that relies on the database.  Works as a part of the ResourceHealthChecker library</Description>
+    <Copyright>Scott Herrmann 2023</Copyright>
   </PropertyGroup>
 
   <ItemGroup>
