--- a/src/ResourceHealthChecker/ResourceHealthChecker.csproj
+++ b/src/ResourceHealthChecker/ResourceHealthChecker.csproj
@@ -2,8 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <AssemblyVersion>1.3.4</AssemblyVersion>
-    <Version>1.3.4</Version>
+    <AssemblyVersion>1.3.5</AssemblyVersion>
+    <Version>1.3.5</Version>
     <PackageId>SlugEnt.$(AssemblyName)</PackageId>
     <Authors>daborg69</Authors>
     <AssemblyName>SlugEnt.$(MSBuildProjectName)</AssemblyName>
@@ -16,6 +16,7 @@
     <PackageTags>Health Resource</PackageTags>
     <PackageReleaseNotes>Added Documentation to package output.  a few bug fixes</PackageReleaseNotes>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
     
   </PropertyGroup>
 
@@ -42,6 +43,15 @@
 
 	<ItemGroup>
 	  <Folder Include="Properties\" />
+	</ItemGroup>
+
+
+
+	<ItemGroup>
+	  <None Update="LICENSE">
+	    <Pack>True</Pack>
+	    <PackagePath>\</PackagePath>
+	  </None>
 	</ItemGroup>
 
 
