--- a/src/ResourceHealthChecker.SqlServer/ResourceHealthChecker.SqlServer.csproj
+++ b/src/ResourceHealthChecker.SqlServer/ResourceHealthChecker.SqlServer.csproj
@@ -1,11 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <AssemblyVersion>1.3.7</AssemblyVersion>
-	<Version>1.3.7</Version>
+    <AssemblyVersion>1.4.0.0</AssemblyVersion>
+	<Version>1.4.0.0</Version>
     <AssemblyName>SlugEnt.$(MSBuildProjectName)</AssemblyName>
     <PackageId>$(AssemblyName)</PackageId>
     <Authors>Scott Herrmann</Authors>
@@ -13,6 +13,7 @@
     <Company>SlugEnt</Company>
     <Description>Provides a simple means of health checking a sql server for a program that relies on the database.  Works as a part of the ResourceHealthChecker library</Description>
     <Copyright>Scott Herrmann 2023</Copyright>
+    <IncludeSymbols>True</IncludeSymbols>
   </PropertyGroup>
 
   <ItemGroup>
