--- a/src/ResourceHealthChecker/ResourceHealthChecker.csproj
+++ b/src/ResourceHealthChecker/ResourceHealthChecker.csproj
@@ -1,9 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <AssemblyVersion>1.3.7</AssemblyVersion>
-    <Version>1.3.7</Version>
+    <TargetFramework>net8.0</TargetFramework>
+    <AssemblyVersion>1.4.0.0</AssemblyVersion>
+    <Version>1.4.0.0</Version>
     <PackageId>SlugEnt.$(AssemblyName)</PackageId>
     <Authors>daborg69</Authors>
     <AssemblyName>SlugEnt.$(MSBuildProjectName)</AssemblyName>
@@ -14,9 +14,11 @@
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <RepositoryUrl>https://github.com/SlugEnt/ResourceHealthChecker</RepositoryUrl>
     <PackageTags>Health Resource</PackageTags>
-    <PackageReleaseNotes>Added Documentation to package output.  a few bug fixes</PackageReleaseNotes>
+    <PackageReleaseNotes>Upgraded to .Net8  Release</PackageReleaseNotes>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <Title>Provides some simplistic resource checking for an application</Title>
+    <IncludeSymbols>True</IncludeSymbols>
     
   </PropertyGroup>
 
