--- a/src/SampleConsoleApp/ResourceHealthChecker.SampleConsole.csproj
+++ b/src/SampleConsoleApp/ResourceHealthChecker.SampleConsole.csproj
@@ -2,12 +2,13 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <AssemblyVersion>1.3.2</AssemblyVersion>
+    <AssemblyVersion>1.4.0.0</AssemblyVersion>
     <AssemblyName>SlugEnt.$(MSBuildProjectName)</AssemblyName>
     <RootNamespace>SlugEnt.$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
+    <Version>1.4.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
