--- a/tests/HealthCheck_Test/HealthCheck_Test.csproj
+++ b/tests/HealthCheck_Test/HealthCheck_Test.csproj
@@ -1,12 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
 
     <IsPackable>false</IsPackable>
 
-    <AssemblyVersion>1.0.0.1</AssemblyVersion>
+    <AssemblyVersion>1.4.0.0</AssemblyVersion>
+
+    <Version>1.4.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
@@ -20,7 +22,9 @@
     <PackageReference Include="NUnit3TestAdapter" Version="4.0.0" />
     <PackageReference Include="coverlet.collector" Version="3.1.0" />
     <PackageReference Include="SlugEnt.UniqueKeys" Version="1.1.0" />
-    <PackageReference Include="System.IO.Abstractions.TestingHelpers" Version="17.0.15" />
+    <PackageReference Include="TestableIO.System.IO.Abstractions" Version="21.0.2" />
+    <PackageReference Include="TestableIO.System.IO.Abstractions.TestingHelpers" Version="21.0.2" />
+    <PackageReference Include="TestableIO.System.IO.Abstractions.Wrappers" Version="21.0.2" />
   </ItemGroup>
 
   <ItemGroup>
