--- a/src/ResourceHealthChecker.RabbitMQ/ResourceHealthChecker.RabbitMQ.csproj
+++ b/src/ResourceHealthChecker.RabbitMQ/ResourceHealthChecker.RabbitMQ.csproj
@@ -6,11 +6,15 @@
     <Nullable>enable</Nullable>
     <AssemblyName>SlugEnt.$(MSBuildProjectName)</AssemblyName>
     <RootNamespace>SlugEnt.$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
-    <Version>1.4.0.0</Version>
+    <Version>1.8.0.0</Version>
+	  <RepositoryUrl>https://github.com/SlugEnt/ResourceHealthChecker</RepositoryUrl>
+	  <PackageTags>Health Resource</PackageTags>
+	  <PackageReleaseNotes>Upgraded to .Net8  Release</PackageReleaseNotes>
+	  <PackageProjectUrl>https://github.com/SlugEnt/ResourceHealthChecker</PackageProjectUrl>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="RabbitMQ.Client" Version="6.3.1" />
+    <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
   </ItemGroup>
 
   <ItemGroup>
